[package]
name = "tatoteco"
description = "TableTop Terrain controller, an app for diplaying tabletop maps on a screen, remote controlled by a web page"
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tokio = { version = "1.28.2", features = ["rt-multi-thread"]}
gtk = "0.17.1"
warp = "0.3.5"
serde = { version = "1.0.164", features = ["derive"] }
clap = { version = "4.3.3" , features = ["derive"]}
itertools = "0.10.5"
regex = "1.8.4"